# Demo

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lingo/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lingo/demo/: MainActivity.kt
app/src/test/java/com/lingo/demo/: ExampleUnitTest.kt
dex_parser/src/main/java/com/lingo/dex_parser/: MyClass.java
dexdiff/: build.gradle
dexdiff/src/androidTest/java/com/lingo/dexdiff/: ExampleInstrumentedTest.java
dexdiff/src/main/: AndroidManifest.xml
dexdiff/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
dexdiff/src/main/res/menu/: menu_main.xml
dexdiff/src/main/res/navigation/: nav_graph.xml
dexdiff/src/main/res/values/: strings.xml
dexdiff/src/main/res/xml/: file_paths.xml
github/: build.gradle  proguard-rules.pro
github/src/main/: AndroidManifest.xml
github/src/main/res/layout/: activity_main.xml  fragment_repos.xml  item_repo.xml
github/src/main/res/values/: dimens.xml
gradle/wrapper/: gradle-wrapper.properties
kotlin/kotlinapp/: build.gradle
kotlin/kotlinapp/src/main/: AndroidManifest.xml
kotlin/kotlinapp/src/main/res/layout/: activity_login.xml  activity_main.xml
my/inject/: build.gradle
my/inject/src/main/: AndroidManifest.xml
my/inject/src/main/res/values/: strings.xml
my/retrofit/: build.gradle
my/retrofit/src/main/: AndroidManifest.xml
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
ui/src/main/java/com/lingo/ui/utils/: Utils.kt  (+1 more)
ui/src/main/res/layout/: activity_main.xml
(+160 files in other folders)
